apps/base/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  type: NodePort
  ports:
  - port: 5230
    targetPort: 5230
  selector:
    app: memos
