apps/base/memos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  namespace: memos
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: memos.fcosanabria.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memos
            port:
              number: 80
